--- a/musicMagic/index.html
+++ b/musicMagic/index.html
@@ -10,6 +10,21 @@
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+	<div class="row container mt-4">
+		<div class="col-md-4">
+			<button class="btn btn-info">Tạo CRS</button>
+		</div>
+		<div class="col-md-4">
+			<button class="btn btn-info">Đăng kí ID mới</button>
+			<br><br>
+			<button class="btn btn-info">Đăng kí chứng chỉ</button>
+			<br><br>
+			<button class="btn btn-info">Đăng kí pháp nhân</button>
+			<br><br>
+			<button class="btn btn-info">Thanh toán</button>
+		</div>
+
+	</div>
 	<div style="margin-top:300px;font-size: 1.5em" class="text-center">
 		Enter fc2 ID test <input type="" name=""><button>Callback</button>
 	</div>
@@ -92,13 +107,52 @@
 		    	keySprite("P", "3");
 		    	break;
 		    case 102	:
-		    	keySprite("F", "3");
+		    	keySprite("F", "4");
 		    	break;
 		    case 121:
-		    	keySprite("Y", "4");
+		    	keySprite("Y", "5");
 		    	break;
 		    case 109:
-		    	keySprite("M", "5");
+		    	keySprite("M", "6");
+		    	break;
+		    case 100:
+		    	keySprite("D", "7");
+		    	break;
+		    case 105:
+		    	keySprite("I", "8");
+		    	break;
+		    case 115:
+		    	keySprite("S", "1");
+		    	break;
+		    case 111:
+		    	keySprite("O", "2");
+		    	break;
+		    case 91:
+		    	keySprite("[", "3");
+		    	break;
+		    case 110:
+		    	keySprite("N", "4");
+		    	break;
+		    case 93:
+		    	keySprite("]", "5");
+		    	break;
+		    case 44:
+		    	keySprite("<", "6");
+		    	break;
+		    case 46:
+		    	keySprite(">", "7");
+		    	break;
+		    case 49:
+		    	keySprite("1K", "8");
+		    	break;
+		    case 106:
+		    	keySprite("J", "1");
+		    	break;
+		    case 53:
+		    	keySprite("5K", "2");
+		    	break;
+		    case 54:
+		    	keySprite("6K", "3");
 		    	break;
 		  	default:
 		    // code block
@@ -128,10 +182,10 @@
 		switch(key) {
 		  	case "A":
 		    	start = 0.5;
-		    	length = 0.5;
+		    	length = 0.7;
 		    	break;
 		  	case "G":
-		    	start = 2;
+		    	start = 2.1;
 		    	length = 0.4;
 		    	break;
 		   	case "L":
@@ -143,8 +197,8 @@
 		    	length = 0.5;
 		    	break;
 		    case ":":
-		    	start = 4.2;
-		    	length = 0.7;
+		    	start = 4.3;
+		    	length = 0.9;
 		    	break;
 		    case "C":
 		    	start = 5;
@@ -175,12 +229,16 @@
 		    	length = 0.7;
 		    	break;
 		    case "X":
-		    	start = 12;
-		    	length = 0.3;
+		    	start = 12.6;
+		    	length = 0.2;
 		    	break;
 		    case "Z":
-		    	start = 13.2;
-		    	length = 0.3;
+		    	start = 12.8;
+		    	length = 0.2;
+		    	break;
+		    case "V":
+		    	start = 13.3;
+		    	length = 0.2;
 		    	break;
 		    case "H":
 		    	start = 13.7;
@@ -190,10 +248,6 @@
 		    	start = 14.6;
 		    	length = 0.7;
 		    	break;
-		    // case "V":
-		    // 	start = 15.8;
-		    // 	length = 0.3;
-		    // 	break;
 		    case "P":
 		    	start = 16.4;
 		    	length = 0.5;
@@ -208,6 +262,58 @@
 		    	break;
 		    case "M":
 		    	start = 19;
+		    	length = 0.3;
+		    	break;
+		    case "D":
+		    	start = 19.7;
+		    	length = 0.3;
+		    	break;
+		    case "I":
+		    	start = 20.3;
+		    	length = 0.3;
+		    	break;
+		    case "S":
+		    	start = 20.8;
+		    	length = 0.3;
+		    	break;
+		    case "O":
+		    	start = 21.2;
+		    	length = 0.3;
+		    	break;
+		    case "[":
+		    	start = 22.2;
+		    	length = 0.3;
+		    	break;
+		    case "N":
+		    	start = 22.9;
+		    	length = 0.3;
+		    	break;
+		    case "]":
+		    	start = 23.6;
+		    	length = 0.3;
+		    	break;
+		    case "<":
+		    	start = 24.1;
+		    	length = 0.4;
+		    	break;
+		    case ">":
+		    	start = 24.6;
+		    	length = 0.6;
+		    	break;
+		    case "1K":
+		    	start = 25.8;
+		    	length = 0.1;
+		    	break;
+		    case "J":
+		    	start = 26.3;
+		    	length = 0.3;
+		    	break;
+		    case "5K":
+		    	start = 26.9;
+		    	length = 0.3;
+		    	break;
+		    case "6K":
+		    	start = 27.8;
 		    	length = 0.3;
 		    	break;
 		  	default:
